Indicate that SMPL skin may lose functionality in future releases

--- a/interfaces/smpl/templates/main.tmpl
+++ b/interfaces/smpl/templates/main.tmpl
@@ -1255,7 +1255,7 @@ function loadingJSON(){
     <option value="0" >$T("none")</option>
   </select></p>
 
-  <p><strong>This skin is no longer supported</strong></p>
+  <p><strong>This skin is no longer supported and may lose functionality in future releases.</strong></p>
 
     <!--#if $new_release#-->
     <!--#set $msg=$T('ft-newRelease@1')%($new_release)#-->
