--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -4,16 +4,13 @@ body {
 }
 #logo {
     display: block;
-    margin: auto;
-    margin-top: 3px;
+    margin: 3px auto auto;
 }
 
 #content {
     color: #000;
-    padding: 15px 20px 20px;
+    padding: 65px 20px 20px;
     font-size: 13px;
-    padding-top: 65px;
-    padding-bottom: 20px;
 }
 .colmask {
     z-index: 20;
@@ -600,8 +597,7 @@ h2.activeRSS {
     padding-top: .4em;
 }
 #subscriptions .chk {
-    padding: 5px;
-    padding-top: 8px;
+    padding: 8px 5px 5px;
     vertical-align: middle;
 }
 #subscriptions .title {
@@ -773,7 +769,6 @@ input[type=radio] {
 input[type="button"],
 input[type="submit"] {
     color: #333;
-    background-color: #fff;
     display:inline-block;
     padding:6px 12px;
     margin-bottom: 0;
@@ -784,7 +779,7 @@ input[type="submit"] {
     white-space:nowrap;
     vertical-align:middle;
     cursor:pointer;
-    background-image:none;
+    background: #fff none;
     border:1px solid #ccc;
     height: 34px;
 }
@@ -1063,9 +1058,7 @@ input[type="checkbox"] {
 
 .Servers .col2 label,
 .Email .col2 label {
-    margin: 0;
-    margin-left: 4px;
-    margin-top: 2px;
+    margin: 2px 0 0 4px;
     cursor: pointer;
 }
 
@@ -1342,9 +1335,7 @@ input[type="checkbox"] {
     }
 
     .desc {
-        margin: 0;
-        margin-left: 3px;
-        margin-top: 2px;
+        margin: 2px 0 0 3px;
         padding: 0 !important;
     }
 
