Detect RSS-feed login redirect and show specific error
Before it would overwrite specific errors detected above by general "No entries" warning.

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -573,6 +573,7 @@ h2.activeRSS {
     float: left;
     margin: 0 6px 0 2px;
     text-align: center;
+    color: black !important;
 }
 .source-icon span {
     top: -3px;
