Py3: Remove smpl-skin

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -53,8 +53,8 @@
         var configTranslate = new Object();
         configTranslate.browseText = "$T('browse-folder')";
         configTranslate.saveChanges = "$T('button-saveChanges')";
-        configTranslate.saving = "$T('smpl-saving')";
-        configTranslate.failed = "$T('smpl-failed')";
+        configTranslate.saving = "$T('button-saving')";
+        configTranslate.failed = "$T('button-failed')";
         configTranslate.explainRestart = "$T('explain-Restart')";
         configTranslate.wizzardRestart = "$T('restarting-sab')";
         configTranslate.needRestart = "$T('restartRequired') $T('explain-needNewLogin')".replace(/\<br(\s*\/|)\>/g, '\n');
