--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -456,7 +456,7 @@
             resultBox.removeClass('alert-success alert-danger').show()
             if(data.status) {
                 resultBox.addClass('alert-success')
-                resultBox.text('$T('smpl-notesent')')
+                resultBox.text('$T('notifications-notesent')')
                 resultBox.prepend('<span class="glyphicon glyphicon-ok-sign"></span> ')
             } else {
                 resultBox.addClass('alert-danger')
