Show Details on Servers page could break graph display
Closes #1207

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -450,6 +450,8 @@
                 \$(this).html(\$(this).html().replace("$T('showDetails')", "$T('hideDetails')"));
             } else {
                 \$(this).html(\$(this).html().replace("$T('hideDetails')", "$T('showDetails')"));
+                // Recalculate the charts if changed while details were open
+                showCharts()
             }
             // Add coloring
             addRowColor()
