--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -2,7 +2,7 @@
 <!--#set global $help_uri="configuration/2.3/configure"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
-<!--#from locale import getpreferredencoding#-->
+<!--#from sabnzbd.encoding import CODEPAGE#-->
 <div class="colmask">
     <div class="section padTable">
         <table class="table table-striped">
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <th scope="row">$T('pythonVersion'): </th>
-                    <td>$sys.version[:120] [$getpreferredencoding()]</td>
+                    <td>$sys.version[:120] [$CODEPAGE]</td>
                 </tr>
                 <tr>
                     <th scope="row">OpenSSL:</th>
