--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -1,5 +1,5 @@
 <!--#from sabnzbd.constants import VALID_ARCHIVES, VALID_NZB_FILES#-->
-<!--#set $file_exts = ','.join(VALID_NZB_FILES + VALID_ARCHIVES)#-->
+<!--#set $file_exts = ', '.join(VALID_NZB_FILES + VALID_ARCHIVES)#-->
 <!-- Notifcation box -->
 <div class="main-notification-box" style="display: none">
     <div class="main-notification-box-uploading">
@@ -435,7 +435,7 @@
                     <form data-bind="submit: addNZBFromURL" class="col-sm-6">
                         <fieldset>
                             <legend class="row-wrap-text">$T('Glitter-addFromURL')</legend>
-                            <div class="input-group" data-tooltip="true" data-placement="bottom" title="$T('Glitter-nzbFormats')">
+                            <div class="input-group" data-tooltip="true" data-placement="bottom" title="$file_exts">
                                 <input type="text" name="nzbURL" class="form-control" placeholder="$T('enterURL')" />
                                 <span class="input-group-btn">
                                     <input type="submit" name="Add" value="$T('add')" class="btn btn-default" />
@@ -446,7 +446,7 @@
                     <form data-bind="submit: addNZBFromFileForm" class="col-sm-6">
                         <fieldset>
                             <legend class="row-wrap-text">$T('Glitter-addFromFile')</legend>
-                            <div class="input-group" data-tooltip="true" data-placement="bottom" title="$T('Glitter-nzbFormats')">
+                            <div class="input-group" data-tooltip="true" data-placement="bottom" title="$file_exts">
                                 <label class="btn btn-default btn-file">
                                     <span class="glyphicon glyphicon-file"></span> <em>$T('Glitter-chooseFile')&hellip;</em>
                                     <input type="file" multiple name="nzbFile" class="form-control" accept="$file_exts" data-bind="event : { change: updateBrowseLabel }" />
@@ -571,7 +571,7 @@
                     <input type="hidden" name="retry_job_id" />
                     <fieldset>
                         <legend>$T('opt-extra-NZB')</legend>
-                        <div class="input-group input-group-addfile" data-tooltip="true" data-placement="bottom" title="$T('Glitter-nzbFormats')">
+                        <div class="input-group input-group-addfile" data-tooltip="true" data-placement="bottom" title="$file_exts">
                             <label class="btn btn-default btn-file">
                                 <span class="glyphicon glyphicon-file"></span> <em>$T('Glitter-chooseFile')&hellip;</em>
                                 <input type="file" name="nzbFile" class="form-control" accept="$file_exts" data-bind="event : { change: updateBrowseLabel }" />
