Remove tapi and replace by api

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -46,7 +46,7 @@
         var sabSession = '$session';
         var rootURL = '${root}'
         var urlBase = '${url_base}'
-        var folderBrowseUrl = '${root}tapi?mode=browse&output=json&apikey=$session';
+        var folderBrowseUrl = '${root}api?mode=browse&output=json&apikey=$session';
         var folderSeperator = '#if $os.sep == '\\' then '\\\\' else '/'#'
 
         // Translations
