--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -405,7 +405,7 @@
         // Get the request
         \$.ajax({
             type: "GET",
-            url: "../../tapi",
+            url: "../../api",
             data: data
         }).then(function(data) {
             // Remove disabled and make the box
