--- a/interfaces/Plush/templates/_inc_modals.tmpl
+++ b/interfaces/Plush/templates/_inc_modals.tmpl
@@ -74,7 +74,7 @@ $T('Plush-containerWidth'):
     <input type="text" id="addID_input" size="31" />
     <input type="submit" id="addID" value="$T('Plush-fetch')" class="juiButton" />
     <div id="add_nzb_hr"><hr></div>
-    <form action="tapi" id="uploadNZBForm" method="post" enctype="multipart/form-data">
+    <form action="api" id="uploadNZBForm" method="post" enctype="multipart/form-data">
       <input type="hidden" name="apikey" value="$session" />
         <input type="hidden" name="mode" value="addfile" />
         <input type="file" id="uploadNZBFile" name="name" size="12" style="width:180px;" />
