--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -475,7 +475,7 @@
                 \$('#previewtv-result').addClass("loading");
                 \$.ajax({
                   type: "GET",
-                  url: "../../tapi",
+                  url: "../../api",
                   data: {mode:'eval_sort', value: 'series', name: \$('#tvsamplename').val(), title: \$tvsortstring, apikey: '$session', output: 'json' },
                   success: function(data){
                     \$('#previewtv-result').removeClass("loading failure").html(data.result);
@@ -496,7 +496,7 @@
                 \$('#previewmovie-result').addClass("loading");
                 \$.ajax({
                   type: "GET",
-                  url: "../../tapi",
+                  url: "../../api",
                   data: {mode:'eval_sort', value: 'movie', name: \$('#moviesamplename').val(), title: \$moviesortstring, movieextra:  \$('#movieextra').val(), apikey: '$session', output: 'json' },
                   success: function(data){
                     \$('#previewmovie-result').removeClass("loading failure").html(data.result);
@@ -517,7 +517,7 @@
                 \$('#previewdate-result').addClass("loading");
                 \$.ajax({
                   type: "GET",
-                  url: "../../tapi",
+                  url: "../../api",
                   data: {mode:'eval_sort', value: 'date', name: \$('#datesamplename').val(), title: \$datesortstring, apikey: '$session', output: 'json' },
                   success: function(data){
                     \$('#previewdate-result').removeClass("loading failure").html(data.result);
